# FCC-fast-sim

./: .gitignore  CMakeLists.txt  Doxyfile  FCCdetector.gdml  FCCmain.cc  Makefile  PythiaInHepMC.root  README.md  ascii.in  examplePar01.cc  examplePar01.cc~  examplePar01.in  examplePar01.in~  gun.in  more.gdml~  other.gdml  other.gdml~  pythia.in  root.in  simple.gdml~  vis.mac
cmake/Modules/: FindPythia8.cmake
data/: PythiaInHepMC.root
data_Pythia8ToAscii/: CMakeLists.txt  main42.cc  main42.cmnd
data_Pythia8ToRoot/: CMakeLists.txt  HepMCClasses.h  main.cxx  main42.cmnd  selection.xml
gdml/: FCCOneDetector.gdml  FCCSD.gdml  more.gdml  simple.gdml
include/: AtlfastBinID.hh  AtlfastElectronMatrixManager.hh  AtlfastMuonBinData.hh  AtlfastMuonMatrixManager.hh  AtlfastParameterResolutions.hh  AtlfastPionMatrixManager.hh  B2TrackerHit.hh  B2TrackerSD.hh  ExP01Classes.hh  FCCActionInitialization.hh  FCCDetectorConstruction.hh  FCCDetectorParametrisation.hh  FCCEMShowerModel.hh  FCCEmSmearModel.hh  FCCEnergySpot.hh  FCCEventAction.hh  FCCEventInformation.hh  FCCEventInformationMessenger.hh  FCCFastSimGeometry.hh  FCCFastSimModelHCal.hh  FCCFastSimModelTracker.hh  FCCHadShowerModel.hh  FCCHadSmearModel.hh  FCCHepMCLinkDef.h  FCCKillModel.hh  FCCMuonShowerModel.hh  FCCMuonSmearModel.hh  FCCOutput.hh  FCCOutputMessenger.hh  FCCPhysicsConstructor.hh  FCCPrimaryParticleInformation.hh  FCCPythiaInterface.hh  FCCRootMessenger.hh  FCCRootReader.hh  FCCRunAction.hh  FCCSDInfo.hh  FCCSmearModel.hh  FCCSmearer.hh  FCCSmearingGeometry.hh  FCCTrackInformation.hh  (+12 more)
include/FCCFastSim/: FCCDetectorParametrisation.hh  FCCFastSimGeometry.hh  FCCFastSimModelEMCal.hh  FCCFastSimModelHCal.hh  FCCFastSimModelTracker.hh  FCCSmearer.hh
include/FCCGenerator/: FCCHepMCClasses.hh  FCCHepMCInterface.hh  FCCParticleGun.hh  FCCParticleGunMessenger.hh  FCCPrimaryGeneratorAction.hh  FCCPrimaryGeneratorMessenger.hh  FCCPythiaInterface.hh  FCCPythiaMessenger.hh  FCCRootMessenger.hh  FCCRootReader.hh
include/FCCInfo/: FCCEventInformation.hh  FCCPrimaryParticleInformation.hh  FCCTrackInformation.hh
include/FCCMain/: FCCActionInitialization.hh  FCCDetectorConstruction.hh  FCCEventAction.hh  FCCOutput.hh  FCCPhysicsList.hh  FCCRunAction.hh  FCCTrackingAction.hh
include2/: FCCActionInitialization.hh  FCCEmCalorimeterHit.hh  FCCEmCalorimeterSD.hh  FCCHadCalorimeterHit.hh  FCCHadCalorimeterSD.hh  FCCMuonShowerModel.hh  FCCSDInfo.hh
src/: AtlfastBinID.cc  AtlfastBremBinData.cc  AtlfastBremMatrixManager.cc  AtlfastCorrelatedData.cc  AtlfastElectronBinData.cc  AtlfastElectronMatrixManager.cc  AtlfastMuonBinData.cc  AtlfastMuonMatrixManager.cc  AtlfastParameterResolutions.cc  AtlfastPionBinData.cc  AtlfastPionMatrixManager.cc  B1ActionInitialization.cc  B2TrackerHit.cc  B2TrackerSD.cc  B3DetectorConstruction.cc  B5HadCalorimeterHit.cc  B5HadCalorimeterSD.cc  FCCActionInitialization.cc  FCCDetectorConstruction.cc  FCCDetectorParametrisation.cc  FCCEMShowerModel.cc  FCCEmCalorimeterHit.cc  FCCEmSmearModel.cc  FCCEventAction.cc  FCCEventInformation.cc  FCCEventInformationMessenger.cc  FCCFastSimGeometry.cc  FCCFastSimModelEMCal.cc  FCCFastSimModelHCal.cc  FCCFastSimModelTracker.cc  FCCHadCalorimeterSD.cc  FCCHadShowerModel.cc  FCCHadSmearModel.cc  FCCHepMCInterface.cc  FCCKillModel.cc  FCCMuonShowerModel.cc  FCCMuonSmearModel.cc  FCCOutput.cc  FCCOutputMessenger.cc  FCCParticleGun.cc  (+25 more)
src/FCCDoc/: Doxyfile
src/FCCFastSim/: FCCDetectorParametrisation.cc  FCCFastSimGeometry.cc  FCCFastSimModelEMCal.cc  FCCFastSimModelHCal.cc  FCCFastSimModelTracker.cc  FCCSmearer.cc
src/FCCFastSim/Atlfast/: AtlfastBremBinData.cc  AtlfastParameterResolutions.cc
src/FCCGenerator/: FCCHepMCInterface.cc  FCCParticleGun.cc  FCCParticleGunMessenger.cc  FCCPrimaryGeneratorAction.cc  FCCPrimaryGeneratorMessenger.cc  FCCPythiaInterface.cc  FCCPythiaMessenger.cc  FCCRootMessenger.cc  FCCRootReader.cc
src/FCCInfo/: FCCEventInformation.cc  FCCPrimaryParticleInformation.cc  FCCTrackInformation.cc
src/FCCMain/: FCCActionInitialization.cc  FCCEventAction.cc  FCCOutput.cc  FCCPhysicsList.cc  FCCPrimaryGeneratorAction.cc  FCCTrackingAction.cc  FCCmain.cc
src2/: AtlfastBremBinData.cc  AtlfastBremMatrixManager.cc  FCCActionInitialization.cc  FCCEMShowerModel.cc  FCCEmCalorimeterSD.cc  FCCEnergySpot.cc  FCCHadCalorimeterHit.cc  FCCHepMCInterface.cc  FCCPhysicsList.cc  FCCPrimaryGeneratorAction.cc  FCCRunAction.cc  FCCSDInfo.cc
tools/: Res.C
tools/pythia8ToRoot/: CMakeLists.txt  HepMCLinkDef.h  main42.cmnd
xml/: hits_selection.xml
